2009-01-18  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-class.php:
	- (_exec) Replace batch file creation hack with "cmd /c : &" hack,
	  which is not as fragile as batch file creation and deletion.

2008-10-05  Abel Cheung  <abelcheung@gmail.com>

	* scorerender-utils.php:
	- (wp_parse_str) Taken from WordPress for backword compat with WP 2.2

	* wp-scorerender.php, scorerender-admin.php:
	- Move all admin related stuff to scorerender-admin.php, and only
	  include them if WP_ADMIN is defined (inside admin page).

	* wp-scorerender.php:
	- (scorerender_get_def_settings, scorerender_populate_options) Move
	  default setting into functions, for some unknown reason global
	  variables disappear upon plugin activation, thereby rendering
	  default settings to nil. Fix plugin upgrade.

2008-09-30  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php:
	- (scorerender_filter) Only convert content if user as unfiltered_html
	  capability and content is not a comment.

2008-09-28  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-class.php:
	- When notation name is not found, throw exception instead.

2008-09-27  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php (scorerender_filter):
	* notation/mup.php (set_magic_file_hook):
	- Instead of hardcoding extra setting for Mup, add wordpress action to
	  handle any extra settings instead. More scalable, though
	  that means injecting setting names into class directly.

	* scorerender-class.php:
	- (scorerender_cache_location_match) New func. Check if cache dir and
	  cache url matches.

2008-09-24  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php: More phpdoc update.

2008-09-23  Abel Cheung  <abelcheung@gmail.com>

	* *.php, notation/*.php: phpdoc update.

2008-09-21  Abel Cheung  <abelcheung@gmail.com>

	* wp-scorerender.php, scorerender-admin.php:
	- Move WP admin related functions to scorerender-admin.php

2008-09-20  Abel Cheung  <abelcheung@gmail.com>
